--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-openai
-python-dotenv
-pydantic
-pytz
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+python-dotenv>=1.0.0
+openai>=1.0.0
+pytz>=2023.3
