--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ python-dotenv>=1.0.0
 openai>=1.0.0
 pytz>=2023.3
 python-multipart>=0.0.9
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+email-validator>=2.0.0
