--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -7,11 +7,25 @@
   "background_color": "#F7F4F0",
   "theme_color": "#8F5774",
   "orientation": "portrait",
+  "scope": "/",
   "icons": [
     {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/favicon.ico",
-      "sizes": "any",
-      "type": "image/x-icon"
+      "sizes": "48x48",
+      "type": "image/x-icon",
+      "purpose": "any"
     }
   ]
 }
